# pepper_surrogate

./: .gitignore  CMakeLists.txt  all_topics.txt  compile_commands.json  debug_vicon_tracker.launch  dependencies.sh  experiment_topics.txt  package.xml  remote_guide.txt  vicon_arm_control_node_multiplot.xml
OpenHMD/: libopenhmd.so.0
launch/: debug_vicon_tracker.launch  debug_vicon_tracker_v2.launch  oculus_surrogate.launch  sim_minimap_test.launch
meshes/: left_touch_controller.dae  oculus_rift.dae  right_touch_controller.dae
msg/: ACNDebugData.msg  ButtonToggle.msg
rosbags/: record_commands.txt  repair_tf.py  tag_tracking_errors.py  vicon_test_oct_7.txt
scripts/: arm_control_node.py  image_distort.py  minimap_node.py  stereo_camera_node.py  vicon_arm_calibration.py
src/: head_control_node.cpp
urdf/: 01-virtualarm.urdf  01-virtualarm.xacro  02-oculus.urdf
