<?xml version="1.0"?>

<package>
  <name>pepper_surrogate</name>
  <version>1.0.0</version>
  <description>Pepper VR controls</description>
  <maintainer email="daniel@dugas.ch">Daniel Dugas</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>tf2_ros</build_depend>
  <run_depend>tf2_ros</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
